--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -22,6 +22,10 @@ h1{
     margin-bottom: 50px;
     color: white;
 }
+h2{
+    text-align: center;
+    color: white;
+}
 .description{
     font-size: 30px;
     margin-bottom: 50px;
