--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-
+    background-image: url("C:\Users\Jarro\UCFBootcamp\Homework\Trivia-game\Assets\css\images\Nickelodeon.jpg")
 }
 button{
     background: none;
@@ -13,6 +13,7 @@ button:focus, button:active{
 }
 .container-fluid{
     width: 100%;
+    height: auto;
     margin: 0 auto;
  
 }
@@ -20,11 +21,11 @@ h1{
     text-align: center;
     font-size: 80px;
     margin-bottom: 50px;
-    color: white;
+    color: orange;
 }
 h2{
     text-align: center;
-    color: white;
+    color: orange;
 }
 .description{
     font-size: 30px;
@@ -32,13 +33,13 @@ h2{
 }
 h4{
     text-align: center;
-    color: white;
+    color: orange;
 }
 .col{
     margin: 7px;
 }
 p{
-    color: white;
+    color: orange;
     text-align: center;
     font-size: 20px;
 
@@ -59,7 +60,7 @@ p{
     height: auto;
     box-sizing: border-box;
     margin: 0 auto;
-    background-color: black;
+    background-color: blue;
     padding: 0;
     margin-top: 100px;
     margin-bottom: 160px;
