added images folder to assets and a background image

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("C:\Users\Jarro\UCFBootcamp\Homework\Trivia-game\Assets\css\images\Nickelodeon.jpg")
+    background-image: url("")
 }
 button{
     background: none;
